--- a/src/components/UI/TextInput/TextInput.scss
+++ b/src/components/UI/TextInput/TextInput.scss
@@ -17,6 +17,11 @@
     &--error {
       border-color: #E35353;
     }
+
+    &--disabled {
+      border-color: #717171;
+      background-color: #d7d7d7;
+    }
   }
 
   &__tag {
@@ -34,6 +39,11 @@
       color: #E31717;
     }
 
+    &--disabled {
+      cursor: not-allowed;
+      color: #606060;
+    }
+
     &::placeholder {
       color: transparent;
     }
@@ -49,6 +59,10 @@
 
     &--error {
       color: rgba(196, 60, 60, 0.6);
+    }
+
+    &--disabled {
+      color: #a2a2a2;
     }
   }
 
