--- a/src/Selector/Selector.scss
+++ b/src/Selector/Selector.scss
@@ -1,25 +1,140 @@
 .selector {
-  & &__block {
+  width: 100%;
+  max-width: 300px;
+
+  position: relative;
+  background: transparent;
+
+  &__dropdown:not(&__dropdown--visible) {
+    display: none;
+  }
+
+  &__dropdown {
+    background: white;
+    border: 1px solid rgba(0, 0, 0, 0.17);
+    border-top: 0;
+    border-radius: 0 0 6px 6px;
+
+    font-size: 14px;
+
+    position: absolute;
+    left: 0;
+    right: 0;
+
+    z-index: 1;
+
+    max-height: 155px;
+    overflow: auto;
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+      width: 7px;
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #d4d4d4;
+      cursor: pointer;
+    }
+  }
+
+  &__dropdown-item {
+    cursor: pointer;
+    padding: 10px 15px;
+    transition: color, background-color .128s;
+
+    &:hover, &--active {
+      background-color: rgba(89, 140, 200, 0.44);
+      color: #16457A;
+    }
+  }
+
+  &__inner {
+    background: white;
+    height: 50px;
+
+    border: 1px solid rgba(0, 0, 0, 0.17);
+    border-radius: 6px;
+
+    transition: border-color .2s;
+
+    display: flex;
+    align-items: center;
+
+    &--dropdown-visible {
+      border-radius: 6px 6px 0 0;
+    }
+
+    &--dropdown-visible::after {
+      display: block;
+      width: 100%;
+      height: 100%;
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+
     &--error {
       border-color: #E35353;
-
-      .light-block__title {
-        color: rgba(196, 60, 60, 0.6);
-      }
     }
 
     &--disabled {
-      border: 1px solid rgba(169, 169, 169, 0.79);
-      background-color: #F1F1F1;
+      border-color: #717171;
+      background-color: #d7d7d7;
+    }
+  }
 
-      .light-block__title {
-        color: #a2a2a2;
-      }
+  &__value {
+    width: 100%;
+    padding-top: 15px;
+    padding-left: 8px;
+  }
+
+  &__placeholder {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+
+    position: absolute;
+    top: -2px;
+    left: 0;
+
+    &--error {
+      color: rgba(196, 60, 60, 0.6);
+    }
+
+    &--disabled {
+      color: #a2a2a2;
     }
   }
 
   &__error-container {
     font-size: 12px;
-    color: #E35353;
+    color: #E31717;
+  }
+
+  @media (min-width: 769px) {
+    &__placeholder {
+      top: 8px;
+      left: 8px;
+
+      transition: top, font-size .2s;
+    }
+  }
+
+  @media (max-width: 768px) {
+    & {
+      padding-top: 18px;
+    }
+
+    &__value {
+      padding-top: 0;
+    }
+
+    &__inner {
+      height: 32px;
+      border-radius: 3px;
+    }
   }
 }
